<resources>

    <string name="app_name">Mi Agenda Personal</string>


    <string name="hello_world">Hello world!</string>



    <string name="action_settings">Settings</string>
    <string name="title_activity_alta_usuarios">Alta nuevo contacto</string>
    <string name="Name">Nombre</string>
    <string name="Apell">Apellidos</string>
    <string name="Adress">Dirección</string>
    <string name="Telephone">Teléfono</string>
    <string name="email">Email</string>
    <string name="zona">Zona</string>
    <string name="categoria">Categoría</string>
    <string name="Cancel">Cancelar</string>
    <string name="Save">Guardar</string>
    <string name="menu_editar">Editar contacto</string>
    <string name="menu_visualizar">Ver datos contacto</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_llamar">Llamar al contacto</string>
    <string name="menu_crear">NUEVO CONTACTO</string>
    <string name="menu_crear_cliente">NUEVO CONTACTO</string>
    <string name="menu_borrar_muchos">ELIMINAR</string>
    <string name="menu_email">Enviar correo</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_buscar">Buscar contacto</string>
    <string name="menu_traer_contactos">Importar tu agenda de Android</string>
    <string name="menu_borrar_todos">Borrar la agenda completa</string>
    <string name="menu_ver_agenda">Mostrar la agenda</string>
    <string name="menu_borrar_algunos">Borrar contactos</string>

    <string name="usuarios_editar_titulo">Editar Contactos</string>
    <string name="usuarios_crear_titulo">Nuevo contacto</string>
    <string name="title_activity_modificar_usuarios">Modificar contactos</string>
    <string name="lista_vacia">Sin Datos</string>
    <string name="agenda_crear_titulo">Alta Nuevo contacto</string>
    <string name="agenda_crear_confirmacion">Nuevo contacto</string>
    <string name="agenda_editar_titulo">Editar contacto</string>
    <string name="agenda_editar_confirmacion">Contacto modificado</string>

    <string name="agenda_eliminar_titulo">Eliminar contacto</string>
    <string name="agenda_eliminar_muchos_titulo">Eliminación masiva de contactos</string>
    <string name="agenda_eliminar_todos_titulo">Eliminar todos los contactos</string>
    <string name="agenda_eliminar_mensaje">¿Seguro que desea eliminar este contacto?</string>
    <string name="agenda_eliminar_muchos_mensaje">A continuación se va a proceder a eliminar el contacto o los clientes seleccionados</string>
    <string name="agenda_eliminar_todos_mensaje">¿Seguro que desea eliminar todos los contactos de la agenda?</string>

    <string name="agenda_eliminar_confirmacion">Contacto eliminado</string>
    <string name="agenda_eliminar_todos_confirmacion">Se han eliminado todos los contactos de su agenda..!</string>
    <string name="agenda_eliminar_muchos_confirmacion">Proceso de eliminación finalizado..!</string>

    <string name="agenda_texto_vacio">Para dar de alta un nuevo contacto es obligatorio rellenar el nombre y el teléfono.</string>
    <string name="agenda_modificacion_vacia">El nombre del contacto está vacío. Revise el formulario.</string>
    <string name="Observaciones">Observaciones</string>

    <string name="categoria1">Familia</string>
    <string name="categoria2">Amigos</string>
    <string name="categoria3">Compañeros</string>
    <string name="categoria4">Otros</string>
    <string name="categoria5">Importado de Android</string>

    <string name="title_activity_importar_contactos">Importar Contactos de Android</string>
    <string name="confirm_import">Se ha finalizado la importación de los contactos guardados en Android</string>

    <string name="aceptar_import">A continuación se va a proceder a importar todos los contactos que hubiera en su agenda de Android</string>

    <string name="titulo_activity_lista">CONTACTOS INCLUIDOS EN TU AGENDA</string>

    <string name="no_hay_registros">NO HAY CONTACTOS EN TU AGENDA</string>

    <string name="concatenar_numero_registros">HAY</string>

    <string name="observaciones_importados">Contacto importado desde la agenda de Android el día: </string>

    <string name="title_activity_settings">Acerca de</string>

    <string name="nueva_linea2">Agenda\nde contactos\npersonal</string>

    <string name="nueva_linea">Bienvenido\na tu agenda\nde contactos.</string>
    <string name="check_toast">Position %1$d : %2$s</string>

    <string name="title_activity_borrar_usuarios">Borrar Contactos</string>
    <string name="buscar_en_searchview">Buscar nombre</string>

    <string name="about">Si necesitas ayuda envía un correo a antoniom.sanchezf@gmail.com.\nAgenda de contactos es una aplicación realizada en el año @ 2015 por Antonio Sánchez.\nEstán reservados todos los derechos de modificación y/o publicación.
    </string>
    <string name="twiter">Sigueme en twiter:</string>
    <string name="enlace"><a href="http://twitter.com/antoniom_sf">http://twitter.com/antoniom_sf</a></string>
    <string name="desarrollador">Desarrollador Android:</string>
    <string name="miemail">antoniom.sanchezf@gmail.com</string>


</resources>

