    <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context=".ModificarUsuarios" >
    <!---
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_settings"/>

        -->
    <item

        android:id="@+id/menu_llamar"
        android:title="@string/menu_llamar"
        android:icon="@android:drawable/sym_action_call"
          android:orderInCategory="1"
        yourapp:showAsAction="always"/>
        <!--android:icon="@android:drawable/sym_action_call"-->

          <!---    android:showAsAction="ifRoom|withText"/>-->


        <item

            android:id="@+id/menu_email"
            android:title="@string/menu_email"
            android:icon="@android:drawable/sym_action_email"
            android:orderInCategory="2"
            yourapp:showAsAction="always"/>

        <item

            android:id="@+id/menu_compartir"
            android:title="@string/menu_compartir"
            android:icon="@drawable/wsh_2"
            android:orderInCategory="3"
            yourapp:showAsAction="always"/>

        <!--- android.R.drawable.companeros-->


        <!-- Settings, should always be in the overflow -->
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            yourapp:showAsAction="never" />

</menu>
