<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppAgendaTema"
    tools:context=".ModificarUsuarios">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_kitkat_height"
            android:background="@color/md_grey_600" />

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@+id/frame"
            android:background="@color/md_grey_600"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarTheme" />


        //MODIFICACIONES PARA MATERIAL DESING---------------//

        <EditText
            android:id="@+id/nombre"
            android:layout_width="@dimen/abc_search_view_preferred_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:layout_below="@+id/toolbar"


            android:hint="@string/Name"
            android:inputType="textCapSentences"
            android:layout_marginLeft="10dp"
            android:textColorHint="#CFCFCF"
            android:drawableLeft="@drawable/ic_action_action_account_box"
            android:layout_marginTop="@dimen/abc_edit_text_inset_top_material"/>


        <EditText
            android:id="@+id/apellidos"
            android:layout_width="@dimen/abc_panel_menu_list_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nombre"

            android:inputType="textCapSentences"
            android:hint="@string/Apell"

            android:layout_marginTop="0dp"
            android:layout_marginLeft="35dp"
            android:textColorHint="#CFCFCF" />


        <EditText
            android:id="@+id/direc"
            android:layout_width="@dimen/abc_search_view_preferred_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/apellidos"

            android:layout_marginLeft="10dp"
            android:hint="@string/Adress"
            android:inputType="textCapSentences"
            android:paddingLeft="5dp"
            android:textColorHint="#CFCFCF"
            android:drawableLeft="@drawable/ic_action_communication_location_on"
            android:layout_marginTop="15dp"/>


        <EditText
            android:id="@+id/telefono"
            android:layout_width="@dimen/abc_search_view_text_min_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/direc"

            android:layout_marginLeft="10dp"
            android:hint="@string/Telephone"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:textColorHint="#CFCFCF"
            android:drawableLeft="@drawable/ic_action_communication_phone"
            android:layout_marginTop="15dp">

        </EditText>


        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/abc_panel_menu_list_width"

            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/telefono"

            android:layout_marginLeft="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColorHint="#CFCFCF"
            android:drawableLeft="@drawable/ic_action_communication_email"
            android:layout_marginTop="15dp"/>

        <!--android:ems="10"-->
        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:textSize="20dp"
            android:hint="@string/categoria"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_action_maps_local_shipping"

            />
        <!--- Para que no aparezca
               <Spinner
                   android:id="@+id/tipo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignTop="@id/t_tipo"
                   android:layout_toRightOf="@id/t_tipo" />
               -->

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/t_tipo"
            android:layout_below="@+id/t_tipo"
            android:paddingLeft="5dp"
            android:layout_marginLeft="10dp"
            >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/categoria1"
                />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria2" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria3" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria4" />

            <!-- <RadioButton
                 android:id="@+id/radio5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Otra País" />

             <RadioButton
                 android:id="@+id/radio6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sin calificar" />-->

        </RadioGroup>


        <EditText
            android:id="@+id/observaciones"
            android:layout_width="@dimen/abc_search_view_preferred_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/radioGroup1"
            android:layout_marginLeft="10dp"

            android:hint="@string/Observaciones"

            android:inputType="textCapSentences|textMultiLine"
            android:paddingLeft="5dp"
            android:textColorHint="#CFCFCF"
            android:drawableLeft="@drawable/ic_action_av_playlist_add"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/observaciones"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/redondeoesquinas"
                android:text="@string/Cancel"
                android:textColor="@android:color/white"


                android:padding="4dp" />
            <!--Para separar a los dos botones-->
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@android:color/white">

            </View>

            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/redondeoesquinas"
                android:text="@string/Save"
                android:textColor="@android:color/white"


                android:padding="5dp"/>

        </LinearLayout>

        //FIN MODIFICACIONES PARA MATERIAL DESING---------------//

        <!--Se pone para evitar que colapse con la Navigation Bar-->
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/botonera"
            android:background="@android:color/white">

        </View>

    </RelativeLayout>


</ScrollView>
   
   

