


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_red_700">

    <!-- Esta activity tiene un tema propio-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        />

    <android.support.v7.widget.Toolbar
        android:layout_marginTop="@dimen/status_bar_margin_top"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarTheme" />

    <ImageView
        android:id="@+id/logosettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="100dp"

        android:src="@drawable/telefgrande" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="320dp"

        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logoapp"
            android:layout_width="80dp"
            android:layout_height="90dp"

            android:layout_marginTop="0dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/iconoapp" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Agenda de contactos"
            android:textStyle="bold"
            android:textColor="@color/md_grey_800"
            android:textSize="22dp"
            android:background="?colorPrimary"

            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/logoapp"
            android:layout_toEndOf="@+id/logoapp" />

        <TextView

            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Versión 1.1"
            android:textStyle="bold"
            android:textColor="@color/md_grey_800"
            android:textSize="19dp"
            android:background="?colorPrimary"
            android:layout_gravity="bottom"
            android:layout_below="@+id/txt1"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/logoapp"
            android:layout_toEndOf="@+id/logoapp"
            />


        <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/about"
        android:textStyle="bold|italic"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:background="?colorPrimary"
        android:id="@+id/textoabout"

        android:layout_below="@+id/logoapp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/twiter"
        android:id="@+id/textView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"

        android:textSize="11sp"
        android:layout_below="@+id/textoabout"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enlace"
        android:id="@+id/url"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="10dp"
        android:textColorLink="@color/md_grey_800"

        android:linksClickable="true"
        android:textSize="11sp"
        android:layout_below="@+id/textoabout"
        />


    </RelativeLayout>

    </ScrollView>
</FrameLayout>


